Added CI pipeline and docker commands

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
-version: '3.3'
+version: '3.4'
 services:
-  web:
+  webex-bot:
     build:
       context: ./
       dockerfile: ./Dockerfile
@@ -11,4 +11,12 @@ services:
     ports:
       - "7001:7001"
     environment:
+      - WEBHOOK_URL=${WEBHOOK_URL}
+      - BOT_TOKEN=${BOT_TOKEN}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7001/"]
+      interval: 2m
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     command: node --use_strict index.js
